--- a/index.html
+++ b/index.html
@@ -357,11 +357,12 @@
                         </section>
                         <section id="contato">
                             <div class="social">
-                                <div class="p_wt">
-                                    <p>Peça pelo whatsapp:<a href="https://api.whatsapp.com/send?phone=5561993968144&text=Olá,%20gostaria%20de%20fazer%20um%20pedido!"><i class="fab fa-whatsapp-square"></i></a></p>
+                                <a href="https://api.whatsapp.com/send?phone=5561993968144&text=Olá,%20gostaria%20de%20fazer%20um%20pedido!" target="_blank" class="p_wt">Pedir pelo whatsapp</a>
+                                <div>
+                                    <p>Visite nossas redes sociais</p>
+                                    <a href="https://www.facebook.com/allyson.athyrson/" target="_blank"><i class="fab fa-facebook"></i></a>
+                                    <a href="https://www.instagram.com/allysonathyrson/?hl=pt-br" target="_blank"><i class="fab fa-instagram-square"></i></a>
                                 </div>
-                                <a href="https://www.facebook.com/allyson.athyrson/"><i class="fab fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/allysonathyrson/?hl=pt-br"><i class="fab fa-instagram-square"></i></a>
                             </div>
                             <div class="endereco">
                                 <address>
@@ -380,10 +381,10 @@
     </body>
     <script>
         
-        $('#carregamento').css('display', 'none');
-        $('#carregado').css('display', 'block');
+        //$('#carregamento').css('display', 'none');
+        //$('#carregado').css('display', 'block');
 
-        //$('#carregado').fadeOut('fast')
+        $('#carregado').fadeOut('fast')
         
         var carregamento;
         var contagem = 0;
@@ -397,8 +398,8 @@
             if(contagem >= 110){
                 clearInterval(carregamento);
 
-                //$('#carregamento').css('display', 'none');
-                //$('#carregado').fadeIn(1000);
+                $('#carregamento').css('display', 'none');
+                $('#carregado').fadeIn(1000);
             }
 
             if(contagem == 15 || contagem == 45 || contagem == 70){
